# mcu_framework

./: CMakeLists.txt  Makefile  README.md  build.sh  make_test.ioc
components/enc28j60/: CMakeLists.txt  enc28j60.c  enc28j60.h  module.mk
components/lwip-1.4.1/: CMakeLists.txt  module.mk
project/lwip_test/: CMakeLists.txt
project/lwip_test/gcc/: Makefile  feature.mk  module.mk
project/lwip_test/inc/: enc28j60_spi.h  ethernetif.h  lwipopts.h  main.h  uart_printf.h
project/lwip_test/inc/arch/: cc.h
project/lwip_test/src/: enc28j60_spi.c  ethernetif.c  lwipdemo.c  main.c  stm32f1xx_it.c  uart_printf.c
